tests/paczka1/small_fuzzy/39600806.err
Error in line 2: GKLiJ0NKRp S991 6,2
Error in line 10: tEpd7m S991 21,08
Error in line 9: tEpd7m S235 19,3
